Add a FieldConvert utility to compute the divergence of the velocity

--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -49,6 +49,8 @@ ADD_NEKTAR_TEST(chan3D_interppointdatatofld_interpcoord)
 ADD_NEKTAR_TEST(chan3D_ptsTocsv)
 ADD_NEKTAR_TEST(chan3D_csvTopts)
 ADD_NEKTAR_TEST(chan3D_npart_tec)
+ADD_NEKTAR_TEST(chan3D_div)
+ADD_NEKTAR_TEST(taylor_vortex_2D_div)
 ADD_NEKTAR_TEST(wss_3D_periodic)
 ADD_NEKTAR_TEST(scale_compressed_2D)
 ADD_NEKTAR_TEST(naca0012_3D_bnd)
