--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,6 +142,19 @@ include:
   allow_failure: true
   timeout: 15m
 
+.header-format-template: &header-format-template
+  <<: *execution-conditions
+  image: debian:11-slim
+  stage: quality-checks
+  variables:
+    TARGETS: library solvers templates tests utilities
+  script:
+    - cd "$CI_PROJECT_DIR"
+    - source .gitlab-ci/header-format-filename.sh
+    - source .gitlab-ci/header-format-license.sh
+  allow_failure: true
+  timeout: 15m
+
 .xml-format-template: &xml-format-template
   <<: *execution-conditions
   image: debian:11-slim
@@ -279,6 +292,10 @@ stretch-full-warnings:
 # CODE FORMATTING
 bullseye-clang-format:
   <<: *clang-format-template
+  needs: []
+
+bullseye-header-format:
+  <<: *header-format-template
   needs: []
 
 bullseye-xml-format:
