--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,7 @@ OPTION(NEKTAR_TEST_ALL "Include full set of regression tests to this build." OFF
 OPTION(NEKTAR_TEST_USE_HOSTFILE "Use a hostfile to explicitly specify number of
 slots." OFF)
 
-OPTION(NEKTAR_ERROR_ON_WARNINGS "Use -Werror to make warnings stop compilation." ON)
+OPTION(NEKTAR_ERROR_ON_WARNINGS "Use -Werror to make warnings stop compilation." OFF)
 MARK_AS_ADVANCED(NEKTAR_ERROR_ON_WARNINGS)
 
 # Meshing utilities and library
