--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -121,6 +121,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(Couette_FRSD_LFRSD_MODIFIED_3DHOMO1D_MVM)
     ADD_NEKTAR_TEST(CylinderSubsonic_NS_FRSD_LFRSD_MODIFIED_3DHOMO1D_MVM)
     ADD_NEKTAR_TEST(CylinderSubsonic_WeakDG_Implicit)
+    ADD_NEKTAR_TEST(implicitSolverCallsSFD LENGTHY)
     ADD_NEKTAR_TEST(Nozzle_AxiSym_NoSwirl)
     ADD_NEKTAR_TEST(Nozzle_AxiSym_Swirl)
     ADD_NEKTAR_TEST(Nozzle_Quasi1D_P6)
@@ -159,7 +160,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
 	ADD_NEKTAR_TEST(Couette_WeakDG_LDG_SEM_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(CylinderSubsonic_NS_WeakDG_LDG_SEM_3DHomo1D_FFT)
 	ADD_NEKTAR_TEST(IsentropicVortex16_WeakDG_SEM_3DHomo1D_FFT)
-    ADD_NEKTAR_TEST(Couette_FRDG_LFRDG_GLL_LAGRANGE_3DHOMO1D_FFT)
+        ADD_NEKTAR_TEST(Couette_FRDG_LFRDG_GLL_LAGRANGE_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(CylinderSubsonic_NS_FRDG_LFRDG_GLL_LAGRANGE_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(IsentropicVortex16_FRDG_GLL_LAGRANGE_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(Couette_FRHU_LFRHU_SEM_3DHOMO1D_FFT)
@@ -168,6 +169,5 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
 	ADD_NEKTAR_TEST(Couette_FRSD_LFRSD_MODIFIED_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(CylinderSubsonic_NS_FRSD_LFRSD_MODIFIED_3DHOMO1D_FFT)
 	ADD_NEKTAR_TEST(IsentropicVortex16_FRSD_MODIFIED_3DHOMO1D_FFT)
-        ADD_NEKTAR_TEST(implicitSolverCallsSFD)
     ENDIF (NEKTAR_USE_FFTW)
 ENDIF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
