--- a/docker/nektar-env/Dockerfile_debian_documentation
+++ b/docker/nektar-env/Dockerfile_debian_documentation
@@ -1,4 +1,4 @@
-FROM %%BASE_IMAGE%%:env-bullseye-default
+FROM %%BASE_IMAGE%%:env-debian-bullseye-default
 
 USER root
 COPY docker/nektar-env/bullseye_documentation_packages.txt packages.txt
