Added scalar adjoint advection terms in AdjointSolver

--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -39,7 +39,9 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
     SUBDIRS(Utilities)      
 
     ADD_NEKTAR_TEST(Kovasznay_Flow_3modes)
+    ADD_NEKTAR_TEST(ThermStab_dir)
     ADD_NEKTAR_TEST(ChanStability)
+    ADD_NEKTAR_TEST(ThermStab_adj) 
     ADD_NEKTAR_TEST(ChanStabilityMaskFunc)
     #ADD_NEKTAR_TEST(ChanStability_adj)
     #ADD_NEKTAR_TEST(ChanStability_Coupled_3D)
@@ -145,6 +147,8 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
 
     IF (NEKTAR_USE_ARPACK)
         ADD_NEKTAR_TEST(ChanStability_adj_Ar) 
+        ADD_NEKTAR_TEST(ThermStab_dir_Ar) 
+        ADD_NEKTAR_TEST(ThermStab_adj_Ar) 
         ADD_NEKTAR_TEST(bfs_tg-AR)
         ADD_NEKTAR_TEST(ChanStability_Coupled) 
         ADD_NEKTAR_TEST(PPF_R10000_Arpack_LM) 
