--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -58,6 +58,7 @@ ADD_NEKTAR_TEST(Helmholtz)
 ADD_NEKTAR_TEST(Hex_channel_C0helmsmoothing)
 ADD_NEKTAR_TEST(surfDist)
 ADD_NEKTAR_TEST(bndextract)
+ADD_NEKTAR_TEST(chanflow_m8_addfld)
 
 IF (NEKTAR_USE_METIS OR NEKTAR_USE_SCOTCH)
     ADD_NEKTAR_TEST(chan3D_part_only)
