--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -288,7 +288,7 @@ IF( NEKTAR_SOLVER_ADR )
         IF (NEKTAR_USE_HDF5)
             ADD_NEKTAR_TEST(Advection3D_m10_DG_prism_VarP_hdf)
             ADD_NEKTAR_TEST(Movement_fixed_3D_stacked_cylinders_curved_hdf5)
-            ADD_NEKTAR_TEST(Movement_fixed_3D_stacked_cylinders_curved_hdf5_par)
+            #ADD_NEKTAR_TEST(Movement_fixed_3D_stacked_cylinders_curved_hdf5_par)
         ENDIF()
         ADD_NEKTAR_TEST(RotPerBcs3D_Annulus LENGTHY)
             ADD_NEKTAR_TEST(UnsteadyAdvection_WDG_3DHomo1D_MVM_NPZ)
